--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+  <link rel="stylesheet" href="assets\font-awesome-4.1.0\css\font-awesome.min.css">
+  <link rel="stylesheet" href="assets\font-awesome-4.1.0\css\font-awesome.css">
 </head>
 <body>
   <app-root></app-root>
